# scribo

./: .gitignore  Dockerfile  LICENSE  README.md  isidore_lands_pubkey.asc  pyproject.toml
fons/scriptor/: comparator.py  inceptor.py  main.py  perfector.py  praetor.py  probator_tool.py  speculator.py
fons/scriptor/templates/sm_sensor/: detect_gpu.sh  get_sm_score.py  log_sm_score.sh
installers/: install_scribo.ps1  install_scribo.ps1.asc  install_scribo.sh  install_scribo.sh.asc  install_scribo_mac.sh  install_scribo_mac.sh.asc  install_scribo_v2.sh  novum_inceptum.sh  secure_installer_bootstrapper.sh
