[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptor"
version = "4.0.0" # A new major version for a major new capability
authors = [{ name = "Isidore Lands & Alex M Xela" }]
description = "The canonized SDK and Fleet Commander for the AetherOS ecosystem."
requires-python = ">=3.8"
dependencies = [
    "black",
    "ruff",
    "patch",
    "watchdog",
    "pytest",
    "python-dotenv",
    "typer[all]",
    "paramiko"  # <<< NEW: For SSH connections
]

[tool.setuptools.packages.find]
where = ["fons"]

# --- NEW SECTION ---
# This tells our installer to include non-Python files found in our package.
[tool.setuptools.package-data]
scriptor = ["templates/sm_sensor/*"]
# -------------------

[project.scripts]
scriptor = "scriptor.main:app"
